work in progress

--- a/src/main/resources/templates/credential/list.html
+++ b/src/main/resources/templates/credential/list.html
@@ -4,22 +4,20 @@
       lang="en"
       layout:decorate="~{layout}">
 <head>
-    <title>Applications</title>
+    <title>Credentials</title>
 </head>
 <body>
     <!--/*@thymesVar id="requestUri" type="java.lang.String"*/-->
     <!--/*@thymesVar id="sortByIdLink" type="java.lang.String"*/-->
     <!--/*@thymesVar id="sortByIdDirection" type="java.lang.String"*/-->
-    <!--/*@thymesVar id="sortByNameLink" type="java.lang.String"*/-->
-    <!--/*@thymesVar id="sortByNameDirection" type="java.lang.String"*/-->
-    <!--/*@thymesVar id="sortByCodeLink" type="java.lang.String"*/-->
-    <!--/*@thymesVar id="sortByCodeDirection" type="java.lang.String"*/-->
+    <!--/*@thymesVar id="sortByUsernameLink" type="java.lang.String"*/-->
+    <!--/*@thymesVar id="sortByUsernameDirection" type="java.lang.String"*/-->
     <div layout:fragment="content">
         <div class="d-flex flex-wrap mb-4">
-            <h1 class="flex-grow-1">Applications</h1>
+            <h1 class="flex-grow-1">Credentials</h1>
             <div>
                 <a class="btn btn-primary ms-2"
-                   th:href="@{/applications/add}"><i class="bi-plus-circle"></i> Add</a>
+                   th:href="@{/credentials/add}"><i class="bi-plus-circle"></i> Add</a>
             </div>
         </div>
 
@@ -29,15 +27,11 @@
             </div>
             <div class="card-body">
                 <div class="card-text">
-                    <form id="searchForm" th:action="${requestUri}" th:object="${businessAppSearch}" method="get">
+                    <form id="searchForm" th:action="${requestUri}" th:object="${credentialSearch}" method="get">
                         <div class="row mb-3">
-                            <div class="col-3">
-                                <label for="txtCode" class="form-label">Code</label>
-                                <input type="text" id="txtCode" th:field="*{code}" class="form-control" />
-                            </div>
-                            <div class="col-9">
-                                <label for="txtName" class="form-label">Name</label>
-                                <input type="text" id="txtName" th:field="*{name}" class="form-control" />
+                            <div class="col">
+                                <label for="txtName" class="form-label">Username</label>
+                                <input type="text" id="txtName" th:field="*{username}" class="form-control" />
                             </div>
                         </div>
                         <div class="row mb-3">
@@ -57,31 +51,29 @@
                 Results
             </div>
             <div class="card-body">
-                <p class="card-text" th:if="${#lists.isEmpty(businessApps)}">No records were found</p>
-                <div th:if="${not #lists.isEmpty(businessApps)}" class="table-responsive">
+                <p class="card-text" th:if="${#lists.isEmpty(credentials)}">No records were found</p>
+                <div th:if="${not #lists.isEmpty(credentials)}" class="table-responsive">
                     <table class="table table-sm table-striped table-hover align-middle">
                         <thead>
                         <tr>
                             <th th:replace="~{fragments/table-utils :: sortableColumnHeader('Id', ${sortByIdLink}, ${sortByIdDirection}, 'id')}"></th>
-                            <th th:replace="~{fragments/table-utils :: sortableColumnHeader('Code', ${sortByCodeLink}, ${sortByCodeDirection}, 'name')}"></th>
-                            <th th:replace="~{fragments/table-utils :: sortableColumnHeader('Name', ${sortByNameLink}, ${sortByNameDirection}, 'name')}"></th>
+                            <th th:replace="~{fragments/table-utils :: sortableColumnHeader('Name', ${sortByUsernameLink}, ${sortByUsernameDirection}, 'name')}"></th>
                             <th><!-- --></th>
                         </tr>
                         </thead>
                         <tbody class="table-group-divider">
-                        <tr th:each="businessApp : ${businessApps}">
-                            <td>[[${businessApp.id}]]</td>
-                            <td>[[${businessApp.code}]]</td>
-                            <td>[[${businessApp.name}]]</td>
+                        <tr th:each="credential : ${credentials}">
+                            <td>[[${credential.id}]]</td>
+                            <td>[[${credential.username}]]</td>
                             <td>
                                 <div class="float-end text-nowrap">
-                                    <a th:href="@{/applications/view/{id}(id=${businessApp.id})}"
+                                    <a th:href="@{/credentials/view/{id}(id=${credential.id})}"
                                        class="btn btn-sm btn-secondary bi-eye"
                                        title="View"></a>
-                                    <a th:href="@{/applications/edit/{id}(id=${businessApp.id})}"
+                                    <a th:href="@{/credentials/edit/{id}(id=${credential.id})}"
                                        class="btn btn-sm btn-secondary bi-pencil-square"
                                        title="Edit"></a>
-                                    <form th:action="@{/applications/delete/{id}(id=${businessApp.id})}"
+                                    <form th:action="@{/credentials/delete/{id}(id=${credential.id})}"
                                           th:hx-confirm="#{delete.confirm}" method="post" class="d-inline">
                                         <button type="submit" class="btn btn-sm btn-secondary bi-trash" title="Delete">
                                         </button>
