--- a/src/main/resources/templates/businessApp/_form.html
+++ b/src/main/resources/templates/businessApp/_form.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Document Type Form</title>
+    <title>Application Form</title>
 </head>
 <body>
     <!--/*@thymesVar id="businessApp" type="ludo.mentis.aciem.ecm.model.BusinessAppDTO"*/-->
