--- a/src/main/resources/templates/home/index.html
+++ b/src/main/resources/templates/home/index.html
@@ -8,11 +8,10 @@
 </head>
 <body>
 <div layout:fragment="content">
-    <h1 class="mb-4">[[#{home.index.headline}]]</h1>
     <div class="col-md-4 mb-5">
-        <h4 class="mb-3">[[#{home.index.exploreEntities}]]</h4>
         <div class="list-group">
             <a th:href="@{/applications}" class="list-group-item list-group-item-action">Applications</a>
+            <a th:href="@{/credentials}" class="list-group-item list-group-item-action">Credentials</a>
         </div>
     </div>
 </div>
