work in progress

--- a/src/main/resources/templates/credential/_form.html
+++ b/src/main/resources/templates/credential/_form.html
@@ -128,7 +128,7 @@
                           th:field="*{notes}"
                           th:classappend="${#fields.hasErrors('notes') ? 'is-invalid' : ''}"
                           th:if="${mode != 'view'}"></textarea>
-                <div th:if="${mode == 'view'}" th:utext="${notes}" class="form-control w-100 border-0" style="height: 400px; overflow-y: scroll; resize: both;">&nbsp;</div>
+                <div th:if="${mode == 'view'}" th:utext="${credential.notes}" class="form-control w-100 border-0" style="height: 400px; overflow-y: scroll; resize: both;">&nbsp;</div>
                 <div th:if="${#fields.hasErrors('notes')}" class="invalid-feedback d-block">
                     <p th:each="error : ${#fields.errors('notes')}" class="mb-0">[[${error}]]</p>
                 </div>
