Encryption algorithm bug fixed.

--- a/src/main/resources/templates/credential/_form.html
+++ b/src/main/resources/templates/credential/_form.html
@@ -89,7 +89,7 @@
                     </div>
                     <div class="col-7">
                         <label for="txtPassword" class="form-label">Password*</label>
-                        <input type="password"
+                        <input type="text"
                                id="txtPassword"
                                class="form-control"
                                th:field="*{password}"
