Basic Credentials CRUD is working.

--- a/src/main/resources/templates/credential/list.html
+++ b/src/main/resources/templates/credential/list.html
@@ -8,10 +8,22 @@
 </head>
 <body>
     <!--/*@thymesVar id="requestUri" type="java.lang.String"*/-->
+    <!--/*@thymesVar id="credential" type="ludo.mentis.aciem.ecm.model.CredentialSearchDTO"*/-->
+    <!--/*@thymesVar id="credentials" type="org.springframework.data.domain.Page<ludo.mentis.aciem.ecm.model.CredentialSearchDTO>"*/-->
     <!--/*@thymesVar id="sortByIdLink" type="java.lang.String"*/-->
     <!--/*@thymesVar id="sortByIdDirection" type="java.lang.String"*/-->
+    <!--/*@thymesVar id="sortByApplicationLink" type="java.lang.String"*/-->
+    <!--/*@thymesVar id="sortByApplicationDirection" type="java.lang.String"*/-->
     <!--/*@thymesVar id="sortByUsernameLink" type="java.lang.String"*/-->
     <!--/*@thymesVar id="sortByUsernameDirection" type="java.lang.String"*/-->
+    <!--/*@thymesVar id="sortEnabledLink" type="java.lang.String"*/-->
+    <!--/*@thymesVar id="sortByEnabledDirection" type="java.lang.String"*/-->
+    <!--/*@thymesVar id="sortVersionLink" type="java.lang.String"*/-->
+    <!--/*@thymesVar id="sortByVersionDirection" type="java.lang.String"*/-->
+    <!--/*@thymesVar id="sortByCreatedAtLink" type="java.lang.String"*/-->
+    <!--/*@thymesVar id="sortByCreatedAtDirection" type="java.lang.String"*/-->
+    <!--/*@thymesVar id="sortByCreatedByLink" type="java.lang.String"*/-->
+    <!--/*@thymesVar id="sortByCreatedByDirection" type="java.lang.String"*/-->
     <div layout:fragment="content">
         <div class="d-flex flex-wrap mb-4">
             <h1 class="flex-grow-1">Credentials</h1>
@@ -29,9 +41,52 @@
                 <div class="card-text">
                     <form id="searchForm" th:action="${requestUri}" th:object="${credentialSearch}" method="get">
                         <div class="row mb-3">
-                            <div class="col">
+                            <div class="col-md-5">
+                                <label for="cboApplication" class="form-label">Application</label>
+                                <select id="cboApplication"
+                                        class="form-select"
+                                        th:field="*{applicationId}">
+                                    <option value="">Please select</option>
+                                    <option th:each="optionValue : ${applicationValues}" th:value="${optionValue.key}">[[${optionValue.value}]]</option>
+                                </select>
+                            </div>
+                            <div class="col-md-3">
+                                <label for="cboEnvironment" class="form-label">Environment</label>
+                                <select id="cboEnvironment"
+                                        class="form-select"
+                                        th:field="*{environment}">
+                                    <option value="">Please select</option>
+                                    <option th:each="optionValue : ${environmentValues}" th:value="${optionValue}">[[${optionValue}]]</option>
+                                </select>
+                            </div>
+                            <div class="col-md-4">
+                                <label for="cboCredentialType" class="form-label">Type</label>
+                                <select id="cboCredentialType"
+                                        class="form-select"
+                                        th:field="*{credentialType}">
+                                    <option value="">Please select</option>
+                                    <option th:each="optionValue : ${credentialTypeValues}" th:value="${optionValue}">[[${optionValue}]]</option>
+                                </select>
+                            </div>
+                        </div>
+                        <div class="row mb-3">
+                            <div class="col-md-5">
                                 <label for="txtName" class="form-label">Username</label>
                                 <input type="text" id="txtName" th:field="*{username}" class="form-control" />
+                            </div>
+                            <div class="col-md-3">
+                                <label for="cboEnabled" class="form-label">Enabled?</label>
+                                <select id="cboEnabled"
+                                        class="form-select"
+                                        th:field="*{enabled}">
+                                    <option value="">Please select</option>
+                                    <option value="true">Yes</option>
+                                    <option value="false">No</option>
+                                </select>
+                            </div>
+                            <div class="col-md-4">
+                                <label for="txtCreatedBy" class="form-label">Created By</label>
+                                <input type="text" id="txtCreatedBy" th:field="*{createdBy}" class="form-control" />
                             </div>
                         </div>
                         <div class="row mb-3">
@@ -57,14 +112,28 @@
                         <thead>
                         <tr>
                             <th th:replace="~{fragments/table-utils :: sortableColumnHeader('Id', ${sortByIdLink}, ${sortByIdDirection}, 'id')}"></th>
-                            <th th:replace="~{fragments/table-utils :: sortableColumnHeader('Name', ${sortByUsernameLink}, ${sortByUsernameDirection}, 'name')}"></th>
+                            <th th:replace="~{fragments/table-utils :: sortableColumnHeader('Application', ${sortByApplicationLink}, ${sortByApplicationDirection}, 'application')}"></th>
+                            <th>Env</th>
+                            <th>Type</th>
+                            <th th:replace="~{fragments/table-utils :: sortableColumnHeader('Username', ${sortByUsernameLink}, ${sortByUsernameDirection}, 'username')}"></th>
+                            <th th:replace="~{fragments/table-utils :: sortableColumnHeader('Enabled?', ${sortByEnabledLink}, ${sortByEnabledDirection}, 'enabled')}"></th>
+                            <th th:replace="~{fragments/table-utils :: sortableColumnHeader('Version', ${sortByVersionLink}, ${sortByVersionDirection}, 'version')}"></th>
+                            <th th:replace="~{fragments/table-utils :: sortableColumnHeader('Last Update', ${sortByCreatedAtLink}, ${sortByCreatedAtDirection}, 'createdAt')}"></th>
+                            <th th:replace="~{fragments/table-utils :: sortableColumnHeader('Updated By', ${sortByCreatedByLink}, ${sortByCreatedByDirection}, 'createdBy')}"></th>
                             <th><!-- --></th>
                         </tr>
                         </thead>
                         <tbody class="table-group-divider">
                         <tr th:each="credential : ${credentials}">
                             <td>[[${credential.id}]]</td>
+                            <td>[[${credential.application}]]</td>
+                            <td>[[${credential.environment}]]</td>
+                            <td>[[${credential.credentialType}]]</td>
                             <td>[[${credential.username}]]</td>
+                            <td>[[${credential.enabled}]]</td>
+                            <td>[[${credential.version}]]</td>
+                            <td>[[${#temporals.format(credential.createdAt, 'dd-MMM-yyyy HH:mm:ss')}]]</td>
+                            <td>[[${credential.createdBy}]]</td>
                             <td>
                                 <div class="float-end text-nowrap">
                                     <a th:href="@{/credentials/view/{id}(id=${credential.id})}"
