--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -1,6 +1,5 @@
 <!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org"
-      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+<html xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       lang="en"
       layout:decorate="~{layout}">
 <head>
