--- a/src/main/resources/templates/fragments/utils.html
+++ b/src/main/resources/templates/fragments/utils.html
@@ -9,6 +9,7 @@
                     </li>
                 </ul>
             </nav>
+            <!--suppress Annotator -->
             <div th:classappend="${paginationModel.steps.size <= 3}? offset-sm-8" class="col-sm-4 pt-sm-2 text-sm-end">[[${paginationModel.elements}]]</div>
         </div>
 
