--- a/src/main/resources/templates/home/index.html
+++ b/src/main/resources/templates/home/index.html
@@ -4,7 +4,7 @@
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{layout}">
 <head>
-    <title>[[#{home.index.headline}]]</title>
+    <title>Home</title>
 </head>
 <body>
 <div layout:fragment="content">
