--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -2,6 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
             xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
+    <!--suppress Annotator -->
     <title layout:title-pattern="$CONTENT_TITLE | $LAYOUT_TITLE">ECM</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
