Several bug fixes and full support for versioning

--- a/src/main/resources/templates/credential/_form.html
+++ b/src/main/resources/templates/credential/_form.html
@@ -9,7 +9,9 @@
     <!--/*@thymesVar id="environmentValues" type="java.util.Map"*/-->
     <!--/*@thymesVar id="credentialTypeValues" type="java.util.Map"*/-->
     <!--/*@thymesVar id="mode" type="java.lang.String"*/-->
+
     <th:block th:fragment="credentialForm(mode, credential)" th:object="${credential}">
+        <h4 th:if="${credential.enabled != null && !credential.enabled}" class="text-danger">You are viewing a deleted record.</h4>
         <div class="card shadow mb-3">
             <div class="card-header">
                 Details
@@ -30,7 +32,7 @@
                             <p th:each="error : ${#fields.errors('applicationId')}" class="mb-0">[[${error}]]</p>
                         </div>
                     </div>
-                    <div class="col-md-2">
+                    <div class="col-md-3">
                         <label for="cboEnvironment" class="form-label">Environment*</label>
                         <select id="cboEnvironment"
                                 class="form-select"
@@ -44,7 +46,7 @@
                             <p th:each="error : ${#fields.errors('environment')}" class="mb-0">[[${error}]]</p>
                         </div>
                     </div>
-                    <div class="col-md-3">
+                    <div class="col-md-4">
                         <label for="cboCredentialType" class="form-label">Type*</label>
                         <select id="cboCredentialType"
                                 class="form-select"
@@ -58,21 +60,6 @@
                             <p th:each="error : ${#fields.errors('credentialType')}" class="mb-0">[[${error}]]</p>
                         </div>
                     </div>
-                    <div class="col-md-2">
-                        <label for="cboEnabled" class="form-label">Enabled?*</label>
-                        <select id="cboEnabled"
-                                class="form-select"
-                                th:field="*{enabled}"
-                                th:disabled="${mode == 'view'}"
-                                th:classappend="${#fields.hasErrors('enabled') ? 'is-invalid' : ''}">
-                            <option value="">Please select</option>
-                            <option value="true">Yes</option>
-                            <option value="false">No</option>
-                        </select>
-                        <div th:if="${#fields.hasErrors('enabled')}" class="invalid-feedback d-block">
-                            <p th:each="error : ${#fields.errors('enabled')}" class="mb-0">[[${error}]]</p>
-                        </div>
-                    </div>
                 </div>
                 <div class="row mb-2">
                     <div class="col-5">
@@ -81,7 +68,7 @@
                                id="txtUsername"
                                class="form-control"
                                th:field="*{username}"
-                               th:disabled="${mode == 'view'}"
+                               th:disabled="${mode == 'view' || mode == 'edit'}"
                                th:classappend="${#fields.hasErrors('username') ? 'is-invalid' : ''}" />
                         <div th:if="${#fields.hasErrors('username')}" class="invalid-feedback d-block">
                             <p th:each="error : ${#fields.errors('username')}" class="mb-0">[[${error}]]</p>
