--- a/src/main/resources/templates/credential/list.html
+++ b/src/main/resources/templates/credential/list.html
@@ -16,9 +16,7 @@
     <!--/*@thymesVar id="sortByApplicationDirection" type="java.lang.String"*/-->
     <!--/*@thymesVar id="sortByUsernameLink" type="java.lang.String"*/-->
     <!--/*@thymesVar id="sortByUsernameDirection" type="java.lang.String"*/-->
-    <!--/*@thymesVar id="sortEnabledLink" type="java.lang.String"*/-->
-    <!--/*@thymesVar id="sortByEnabledDirection" type="java.lang.String"*/-->
-    <!--/*@thymesVar id="sortVersionLink" type="java.lang.String"*/-->
+    <!--/*@thymesVar id="sortByVersionLink" type="java.lang.String"*/-->
     <!--/*@thymesVar id="sortByVersionDirection" type="java.lang.String"*/-->
     <!--/*@thymesVar id="sortByCreatedAtLink" type="java.lang.String"*/-->
     <!--/*@thymesVar id="sortByCreatedAtDirection" type="java.lang.String"*/-->
@@ -75,13 +73,12 @@
                                 <input type="text" id="txtName" th:field="*{username}" class="form-control" />
                             </div>
                             <div class="col-md-3">
-                                <label for="cboEnabled" class="form-label">Enabled?</label>
+                                <label for="cboEnabled" class="form-label">Show Deleted?</label>
                                 <select id="cboEnabled"
                                         class="form-select"
                                         th:field="*{enabled}">
-                                    <option value="">Please select</option>
-                                    <option value="true">Yes</option>
-                                    <option value="false">No</option>
+                                    <option value="true">No</option>
+                                    <option value="false">Yes</option>
                                 </select>
                             </div>
                             <div class="col-md-4">
@@ -116,7 +113,6 @@
                             <th>Env</th>
                             <th>Type</th>
                             <th th:replace="~{fragments/table-utils :: sortableColumnHeader('Username', ${sortByUsernameLink}, ${sortByUsernameDirection}, 'username')}"></th>
-                            <th th:replace="~{fragments/table-utils :: sortableColumnHeader('Enabled?', ${sortByEnabledLink}, ${sortByEnabledDirection}, 'enabled')}"></th>
                             <th th:replace="~{fragments/table-utils :: sortableColumnHeader('Version', ${sortByVersionLink}, ${sortByVersionDirection}, 'version')}"></th>
                             <th th:replace="~{fragments/table-utils :: sortableColumnHeader('Last Update', ${sortByCreatedAtLink}, ${sortByCreatedAtDirection}, 'createdAt')}"></th>
                             <th th:replace="~{fragments/table-utils :: sortableColumnHeader('Updated By', ${sortByCreatedByLink}, ${sortByCreatedByDirection}, 'createdBy')}"></th>
@@ -130,12 +126,15 @@
                             <td>[[${credential.environment}]]</td>
                             <td>[[${credential.credentialType}]]</td>
                             <td>[[${credential.username}]]</td>
-                            <td>[[${credential.enabled}]]</td>
                             <td>[[${credential.version}]]</td>
                             <td>[[${#temporals.format(credential.createdAt, 'dd-MMM-yyyy HH:mm:ss')}]]</td>
                             <td>[[${credential.createdBy}]]</td>
                             <td>
                                 <div class="float-end text-nowrap">
+                                    <a th:href="@{/credentials/history/{id}(id=${credential.id})}"
+                                       th:if="${credential.version() != 1}"
+                                       class="btn btn-sm btn-secondary bi-clock"
+                                       title="History"></a>
                                     <a th:href="@{/credentials/view/{id}(id=${credential.id})}"
                                        class="btn btn-sm btn-secondary bi-eye"
                                        title="View"></a>
